@@ -12,6 +12,7 @@
 \newcommand{\F}{\mathsf{F}} % eventually
 \newcommand{\G}{\mathsf{G}} % always
 \newcommand{\X}{\mathsf{X}} % next
+\newcommand{\StrongX}{\mathsf{X^{[!]}}} % strong next
 % The \mathbin tells TeX to adjust spacing for binary operators
 \newcommand{\M}{\mathbin{\mathsf{M}}} % strong release
 \newcommand{\R}{\mathbin{\mathsf{R}}} % release
